<resources>
    <string name="app_name">ProfileUI_1</string>
    <string name="ryan_alferedo">Ryan Alferedo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ryan_alferedo_gmail_com">ryan_alferedo@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="mobile">Mobile</string>
    <string name="_123_123_456">123-123-456</string>
    <string name="telephone">Telephone</string>
    <string name="_456_456_456">456-456-456</string>
    <string name="address">Address</string>
    <string name="england">England</string>
    <string name="postal">Postal</string>
    <string name="_2200">2200</string>
    <string name="password">Password</string>
    <string name="change">Change</string>
</resources>