<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/topBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/top_bcakground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/proName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ryan_alferedo"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/proEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ryan_alferedo_gmail_com"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/proName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:id="@+id/proList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/proEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:elevation="3dp"
                        android:background="@drawable/background2"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/notification"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/notification"/>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/background2"
                        android:layout_margin="10dp"
                        android:elevation="3dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/payment"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:text="@string/payment"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:elevation="3dp"
                        android:background="@drawable/background2"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/settings"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:text="@string/settings"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/password"
                        android:layout_weight="1"
                        android:textColor="#2677E4"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/change"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="20sp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#585858"
                    android:layout_margin="10dp"
                    android:alpha="0.5"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mobile"
                        android:layout_weight="1"
                        android:textColor="#2677E4"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_123_123_456"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="20sp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#585858"
                    android:layout_margin="10dp"
                    android:alpha="0.5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/telephone"
                        android:layout_weight="1"
                        android:textColor="#2677E4"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_456_456_456"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="20sp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#585858"
                    android:layout_margin="10dp"
                    android:alpha="0.5"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/address"
                        android:layout_weight="1"
                        android:textColor="#2677E4"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/england"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="20sp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#585858"
                    android:layout_margin="10dp"
                    android:alpha="0.5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/postal"
                        android:layout_weight="1"
                        android:textColor="#2677E4"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_2200"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:layout_marginBottom="20dp"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/btn_background"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proList" />


</androidx.constraintlayout.widget.ConstraintLayout>